# temp_code

./: .gitignore  README.md
PYTHON/: csv_netcdf.py  csv_to_png.py  gain_analysis_plots_summary.py  gain_statistics_helper.py  netcdf_png.py  png_mp4.py  test_ppt_img.py
PYTHON/CLUTTER/: MAE_test.py  N2V_Inference.py  N2V_Training.py  clutter_clearance_data9.py  clutter_clearance_data9_v2.py
PYTHON/old_python/: Lake_Public_access_SC.xlsx  Lake_map_generator_SC.py  Map_url_to_lat-long.py  MiDAS_depth.py  SC_Public_Beach_Access_Points.csv  TXT.NC_script.py  manual_overlay.py  multi-gain_distribution.py  plot_radar_sweep.m  segmentation.py  testMAE.py  test_MAE_model.py  test_denoise.py  test_png_data.py
PYTHON/old_python/radar_simulations/: CFAR_examples.py  grid_and_cube.py  part3.py  part4.py  part5.py  radar_params.py  testing_clutter_rough.py
RUST/angle_correction/: Cargo.toml
RUST/angle_correction/src/: main.rs
RUST/check_csv_inc/: Cargo.toml
RUST/check_csv_inc/src/: main.rs
RUST/csv_dim_reporter/: Cargo.toml
RUST/csv_dim_reporter/src/: lib.rs  lib_tests.rs  main.rs
RUST/radar_to_netcdf/: Cargo.toml
RUST/radar_to_netcdf/src/: main.rs
